Bug 68813 - nfs:// does not work with cyrillic filenames
Summary: nfs:// does not work with cyrillic filenames
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: nfs (other bugs)
Version First Reported In: unspecified
Platform: FreeBSD Ports FreeBSD
: NOR normal
Target Milestone: ---
Assignee: Alexander Neundorf
URL:
Keywords:
: 130114 (view as bug list)
Depends on:
Blocks:
 
Reported: 2003-11-22 22:19 UTC by Artem Temniy
Modified: 2010-12-12 20:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Artem Temniy 2003-11-22 22:19:56 UTC
Version:            (using KDE KDE 3.1.4)
Installed from:    FreeBSD Ports
OS:          FreeBSD

nfs:// does not work with cyrillic filenames
writes that file or directory **** does not exist
Comment 1 Thiago Macieira 2003-11-22 22:30:47 UTC
What does it show when you mount via mount(1)? What parameters do you use, if any?
Comment 2 Artem Temniy 2003-11-23 01:31:05 UTC
when i mount nfs filesystem from shell via "mount_nfs someserver:/someshare /mnt/somedir" everything's fine
Comment 3 Alexander Neundorf 2003-12-03 21:44:20 UTC
That's really the first feedback ever I get for the nfs ioslave. I thought I would work for nobody, so that nobofy even feels the need to report it.
I already thought about moving it away from kdebase...

Alex
Comment 4 Thiago Macieira 2003-12-04 16:38:18 UTC
Alexander: if you need to change the encoding depending on user selection, please postpone this till after 3.2. I have a fix for bug #56197 that enables charset selection for T_FILESYSTEM ioslaves. Currently I have only ported kio_ftp for this new framework, but kio_nfs and kio_fish will probably require it as well.
Comment 5 Francesco Locunto 2007-01-21 10:58:03 UTC
This problem persists in kde 3.5.5 (opensuse 10.2 rpm), with utf-8 encoding.
I'm unable to browse NFS shares containg characters like "ì", "ò" etc.
Chanching remote charset in menu "Tools->Choose remote charset" (in my italian version "Strumenti->Seleziona insieme di caratteri remoto...") doesn't solve the problem (probably nfs kioslave doesn't support this features, as described in bug #56197).
For this, I must mount the nfs share manually.
Comment 6 rpansky 2009-06-30 20:17:41 UTC
KDE 4.2.4 behaves similarly. If there is a file with utf-8 encoded non-ASCII name, the exported directory content cannot be listed and the following message is displayed instead:
"The file or folder <garbage> does not exist."
Probably, bug http://bugs.kde.org/show_bug.cgi?id=130114 is the same one.
Comment 7 Michael Zanetti 2010-12-12 20:37:41 UTC
*** Bug 130114 has been marked as a duplicate of this bug. ***
Comment 8 Michael Zanetti 2010-12-12 20:58:22 UTC
SVN commit 1205848 by mzanetti:

-Always decode the filename after incoming from network
-only encode the filename once before sending it out over the network

This fixes the ioslave when used with filenames containing non-ascii characters

BUG: 68813



 M  +12 -12    kio_nfs.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1205848