-Always decode the filename after incoming from network -only encode the filename once before sending it out over the network

This fixes the ioslave when used with filenames containing non-ascii characters

BUG: 68813


svn path=/trunk/KDE/kdebase/runtime/; revision=1205848